# synthetic-global-equity

./: .gitignore  LICENSE  README.md  flake.nix  pyproject.toml  synthetic_ftse_all_world.ipynb
.devcontainer/: Dockerfile  devcontainer.json  post-create.sh  supervisord.conf
.devcontainer/windows/: devcontainer.json
data/: .~lock.synthetic_ftse_all_world.csv#  .~lock.synthetic_ftse_all_world_annual_returns.csv#  ftse_all_world_index_sep_2003_to_may_2026.csv  msci_acwi_index_dec_1987_to_may_2026.csv  msci_world_index_dec_1969_to_may_2026.csv  synthetic_ftse_all_world.csv  synthetic_ftse_all_world_annual.csv  synthetic_ftse_all_world_annual_returns.csv  synthetic_ftse_all_world_monthly_returns.csv
synthetic_global_equity/: __init__.py
